--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ section .location {
     		<img class="image" src="/images/ervin.jpeg" alt="Ervin Rácz" />
     		<div class="middle">
     			<h1 class="name">Ervin Rácz</h1>
-    			<h2 class="label">Software Engineer (Full Stack | Java | React)</h2>
+    			<h2 class="label">Software Engineer (Full Stack: Java &amp; React)</h2>
     		</div>
     
     		<span class="location">
