--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@ section .location {
                     <span class="endDate">- Current</span>
                   </div>
                   <div class="position">Software Engineer</div>
-                  <div class="company">as Freelancer</div>
+                  <div class="company">different clients as Freelancer</div>
                 </header>
     
                 <span class="fas fa-map-marker-alt"></span>
